basic-network-policies/allow-backend-to-mysql.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-backend-to-mysql
  namespace: react-app
spec:
  podSelector:
    matchLabels:
      app: mysql
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: react-app-backend
      ports:
        - protocol: TCP
          port: 3306
  policyTypes:
    - Ingress
