basic-network-policies/allow-frontend-to-backend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-to-backend
  namespace: react-app
spec:
  podSelector:
    matchLabels:
      app: react-app-backend
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: react-app-frontend
      ports:
        - protocol: TCP
          port: 3000
  policyTypes:
    - Ingress
