basic-network-policies/deny-all-default.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: react-app
spec:
  podSelector: {}
  policyTypes:
    - Ingress
